adding more detail to instructions

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,6 @@
+# Need to install kitty terminal and fish shell first, then..
+# Needs to be placed in ~/.config/kitty
+
 shell fish
 hide_window_decorations no
 window_logo_path none
@@ -58,4 +61,5 @@ color14  #84edb9
 color7   #c0b18b
 color15  #d8d8d8
 
-# Once this is done install fisher (fish plugin manager: jorgebucaran/fisher), then install and go through the config of the Tide plugin (fisher install IlanCosman/tide@v5)
+# Once this is done install fisher (fish plugin manager: jorgebucaran/fisher check the repo for insttructions)
+# Then install and go through the config of the Tide plugin (fisher install IlanCosman/tide@v5)
