updating some config

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,8 +1,8 @@
 # Need to install kitty terminal and fish shell first, then..
 # Needs to be placed in ~/.config/kitty
-
+# Requires Hack nerd font, found here: ryanoasis/nerd-fonts. Install in ~/.local/share/fonts
 shell fish
-hide_window_decorations no
+hide_window_decorations yes
 window_logo_path none
 
 
