--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,7 @@
 # Needs to be placed in ~/.config/kitty
 # Requires Hack nerd font, found here: ryanoasis/nerd-fonts. Install in ~/.local/share/fonts
 shell fish
+# Set hide_window_decorations to no on linux until figure out movement - it's hard to drag and position the window
 hide_window_decorations yes
 window_logo_path none
 
