updating color scheme

--- a/kitty.conf
+++ b/kitty.conf
@@ -14,7 +14,54 @@ bold_font auto
 bold_italic_font auto
 font_size 12.0
 
-#Gruvbox theme
+cursor #8fee96
+cursor_shape block
+
+term xterm-256color
+background_opacity 0.95
+
+# Kanagawa Wave color scheme
+
+background #1F1F28
+foreground #DCD7BA
+selection_background #2D4F67
+selection_foreground #C8C093
+url_color #72A7BC
+cursor #C8C093
+
+# Tabs
+active_tab_background #1F1F28
+active_tab_foreground #C8C093
+inactive_tab_background  #1F1F28
+inactive_tab_foreground #727169
+#tab_bar_background #15161E
+
+# normal
+color0 #16161D
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+color7 #C8C093
+
+# bright
+color8  #727169
+color9  #E82424
+color10 #98BB6C
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+color15 #DCD7BA
+
+
+# extended colors
+color16 #FFA066
+color17 #FF5D62
+
+# Gruvbox color scheme:
 
 foreground #ebdbb3
 background #272727
@@ -22,45 +69,40 @@ selection_foreground #655b53
 selection_background #ebdbb2
 url_color #d65c0d
 
-cursor #8fee96
-cursor_shape block
-
-term xterm-256color
-background_opacity 0.95
 
 # Gruvbox colors
 
-# black
-color0   #2f2f2f
-color8   #656565
+## black
+# color0   #2f2f2f
+#color8   #656565
 
-# red
-color1   #d75f5f
-color9   #d75f5f
-
-# green
-color2    #d4d232
-color10   #8fee96
-
-# yellow
-color3    #af865a
-color11   #cd950c
-
-# blue
-color4   #22c3a1
-color12  #22c3a1
-
-# magenta
-color5   #775759
-color13  #775759
-
-# cyan
-color6   #84edb9
-color14  #84edb9
-
-# white
-color7   #c0b18b
-color15  #d8d8d8
+## red
+#color1   #d75f5f
+#color9   #d75f5f
+#
+## green
+#color2    #d4d232
+#color10   #8fee96
+#
+## yellow
+#color3    #af865a
+#color11   #cd950c
+#
+## blue
+#color4   #22c3a1
+#color12  #22c3a1
+#
+## magenta
+#color5   #775759
+#color13  #775759
+#
+## cyan
+#color6   #84edb9
+#color14  #84edb9
+#
+## white
+#color7   #c0b18b
+#color15  #d8d8d8
 
 # Once this is done install fisher (fish plugin manager: jorgebucaran/fisher check the repo for insttructions)
 # Then install and go through the config of the Tide plugin (fisher install IlanCosman/tide@v5)
