kitty config updates

--- a/kitty.conf
+++ b/kitty.conf
@@ -2,13 +2,17 @@
 # Needs to be placed in ~/.config/kitty
 # Requires Hack nerd font, found here: ryanoasis/nerd-fonts. Install in ~/.local/share/fonts
 shell fish
+
 # Set hide_window_decorations to no on linux until figure out movement - it's hard to drag and position the window
 hide_window_decorations yes
 window_logo_path none
 
+# Kitty conffig update so new window/tab opens in current dir.
+map kitty_mod+t new_tab_with_cwd
+map kitty_mod+enter new_window_with_cwd
 
 # Fonts
-font_family Hack Nerd Font Mono
+font_family Jet Brains Mono 
 italic_font auto
 bold_font auto
 bold_italic_font auto
@@ -18,7 +22,7 @@ cursor #8fee96
 cursor_shape block
 
 term xterm-256color
-background_opacity 0.95
+background_opacity 0.70
 
 # Kanagawa Wave color scheme
 
@@ -69,6 +73,15 @@ selection_foreground #655b53
 selection_background #ebdbb2
 url_color #d65c0d
 
+# Resizing hotkey config
+
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter 3
+
+# reset all windows in the tab to default sizes
+map ctrl+home resize_window reset
 
 # Gruvbox colors
 
