adding shell config for vscode and docs

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 # Need to install kitty terminal and fish shell first, then..
-# Needs to be placed in ~/.config/kitty
-# Requires Hack nerd font, found here: ryanoasis/nerd-fonts. Install in ~/.local/share/fonts
+# needs to be placed in ~/.config/kitty
+# Install nerd font in ~/.local/share/fonts
 shell fish
 
 # Set hide_window_decorations to no on linux until figure out movement - it's hard to drag and position the window
@@ -117,5 +117,3 @@ map ctrl+home resize_window reset
 #color7   #c0b18b
 #color15  #d8d8d8
 
-# Once this is done install fisher (fish plugin manager: jorgebucaran/fisher check the repo for insttructions)
-# Then install and go through the config of the Tide plugin (fisher install IlanCosman/tide@v5)
