--- a/kitty.conf
+++ b/kitty.conf
@@ -3,6 +3,9 @@
 # Install nerd font in ~/.local/share/fonts
 shell fish
 
+# close tab without confirmation
+confirm_os_window_close 0
+
 # Set hide_window_decorations to no on linux until figure out movement - it's hard to drag and position the window
 hide_window_decorations yes
 window_logo_path none
